--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -36,7 +36,7 @@
         <div>
             <img class="mandala" src="./../../image/Mandala.png" alt="">
         </div>
-        <div id="centro">
+        <div>
             <div id="textoHome">
                 <p>
                     Seja bem-vindo ao Mundo do Yoga
