--- a/pages/Fotos/fotos.html
+++ b/pages/Fotos/fotos.html
@@ -61,7 +61,7 @@
             <p class="p1Footer">
                 Nos sigam nas redes sociais
             </p>
-            <div id="iconesRedes">
+            <div>
                 <a href="https://br.linkedin.com/"><img class="redes" src="./../../image/linkedin.png"
                         alt="LinkedIn"></a>
                 <a href="https://facebook.com/"><img class="redes" src="./../../image/facebook.png" alt="Facebook"></a>
