Adicionando script js no html

--- a/pages/Contato/contato.html
+++ b/pages/Contato/contato.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="./index.js" defer></script>
     <link rel="icon" href="./../../image/Mandala.png"/>
     <link rel="stylesheet" href="./contato.css">
     <title>Contato</title>
@@ -35,7 +36,7 @@
         </div>
     </nav>
     <div id="contato">
-        <form class="card">
+        <form id="formulario" class="card">
             <p class="frase1">Deseja falar conosco?</p>
             <div>
                 <label for="nome">Nome*</label>
@@ -50,17 +51,17 @@
                 <textarea name="mensagem" rows="5" required></textarea>
             </div>
             <p class="frase-obt"><strong>Itens com * são obrigatórios</strong></p>
-            <button type="submit">ENVIAR</button>
+            <button id="btn" type="submit">ENVIAR</button>
         </form>
 
-        <div class="card">
+        <!--<div class="card">
             <p class="frase1">Endereço</p>
             <p class="frase2">Av. Paulista, 1811 - Bela Vista - 01311-200</p>
             <p class="frase2">São Paulo - SP</p>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.224851514315!2d-46.6602149850221!3d-23.560366584683333!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59dda627a4c1%3A0x5b2894a7ce278306!2sM%C3%A9qui%201000!5e0!3m2!1spt-BR!2sbr!4v1661452739665!5m2!1spt-BR!2sbr">
             </iframe>
-        </div>
+        </div>-->
 
     </div>
 
