--- a/pages/Contato/contato.html
+++ b/pages/Contato/contato.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./index.js" defer></script>
-    <link rel="icon" href="./../../image/Mandala.png"/>
+    <link rel="icon" href="./../../image/Mandala.png" />
     <link rel="stylesheet" href="./contato.css">
     <title>Contato</title>
 </head>
@@ -54,14 +54,14 @@
             <button id="btn" type="submit">ENVIAR</button>
         </form>
 
-        <!--<div class="card">
+        <div class="card">
             <p class="frase1">Endereço</p>
             <p class="frase2">Av. Paulista, 1811 - Bela Vista - 01311-200</p>
             <p class="frase2">São Paulo - SP</p>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.224851514315!2d-46.6602149850221!3d-23.560366584683333!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59dda627a4c1%3A0x5b2894a7ce278306!2sM%C3%A9qui%201000!5e0!3m2!1spt-BR!2sbr!4v1661452739665!5m2!1spt-BR!2sbr">
             </iframe>
-        </div>-->
+        </div>
 
     </div>
 
