Adicionando validador de email

--- a/pages/Contato/contato.html
+++ b/pages/Contato/contato.html
@@ -44,7 +44,7 @@
             </div>
             <div>
                 <label for="email">E-mail*</label>
-                <input name="email" type="email" required>
+                <input name="email" type="email" required oninput="validarEmail()">
             </div>
             <div>
                 <label for="mensagem">Mensagem*</label>
