Adicionando novas páginas ao menu de navegação

--- a/pages/html/contato.html
+++ b/pages/html/contato.html
@@ -35,6 +35,12 @@
                 </li>
             </ul>
         </div>
+
+        <div class="logar">
+            <a class="itens-logar" href="./cadastro.html">Cadastre-se</a>
+
+            <a class="itens-logar" href="./login.html">Entrar</a>
+        </div>
     </nav>
     <div id="contato">
         <form id="formulario" class="card">
