--- a/pages/html/fotos.html
+++ b/pages/html/fotos.html
@@ -33,6 +33,12 @@
                 </li>
             </ul>
         </div>
+
+        <div class="logar">
+            <a class="itens-logar" href="./cadastro.html">Cadastre-se</a>
+
+            <a class="itens-logar" href="./login.html">Entrar</a>
+        </div>
     </nav>
     <div id="cardFotos">
         <div id="texto">
