--- a/pages/html/home.html
+++ b/pages/html/home.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./../../image/Mandala.png"/>
-    <link rel="stylesheet"  href="./../styles/styles.css">
+    <link rel="icon" href="./../../image/Mandala.png" />
+    <link rel="stylesheet" href="./../styles/styles.css">
     <title>Home</title>
 </head>
 
@@ -30,7 +30,16 @@
                 </li>
             </ul>
         </div>
+
+        <div class="logar">
+            <a class="itens-logar" href="./cadastro.html">Cadastre-se</a>
+
+            <a class="itens-logar" href="./login.html">Entrar</a>
+        </div>
+
     </nav>
+
+
 
     <div id="home">
         <div>
