--- a/pages/html/postagens.html
+++ b/pages/html/postagens.html
@@ -34,6 +34,11 @@
                 </li>
             </ul>
         </div>
+        <div class="logar">
+            <a class="itens-logar" href="./cadastro.html">Cadastre-se</a>
+
+            <a class="itens-logar" href="./login.html">Entrar</a>
+        </div>
     </nav>
     <div id="cardPost">
         <div class="espaco">
