--- a/pages/html/contato.html
+++ b/pages/html/contato.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./../js/index.js" defer></script>
+    <script src="./../js/contato.js" defer></script>
     <link rel="icon" href="./../../image/Mandala.png" />
     <link rel="stylesheet" href="./../styles/styles.css">
     <title>Contato</title>
