--- a/pages/html/login.html
+++ b/pages/html/login.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="./../js/index.js" defer></script>
     <link rel="icon" href="./../../image/Mandala.png" />
     <link rel="stylesheet" href="./../styles/styles.css">
     <title>Login</title>
@@ -52,7 +53,7 @@
                 <input name="senha" type="password" required></input>
             </div>
             <p class="frase-obt"><strong>Itens com * são obrigatórios</strong></p>
-            <button id="btn" type="submit">ENVIAR</button>
+            <button id="btn3" type="submit">ENVIAR</button>
         </form>
     </div>
 
