--- a/pages/html/cadastro.html
+++ b/pages/html/cadastro.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./../js/index.js" defer></script>
+    <script src="./../js/cadastro.js" defer></script>
     <link rel="icon" href="./../../image/Mandala.png" />
     <link rel="stylesheet" href="./../styles/styles.css">
     <title>Cadastrar</title>
@@ -42,7 +42,7 @@
         </div>
     </nav>
     <div id="cadastro">
-        <form>
+        <form id="formulario-cadastro">
             <p id="txt-cadastro">Cadastre-se</p>
             <div>
                 <label for="nome">Nome*</label>
