--- a/pages/html/login.html
+++ b/pages/html/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./../js/index.js" defer></script>
+    <script src="./../js/login.js" defer></script>
     <link rel="icon" href="./../../image/Mandala.png" />
     <link rel="stylesheet" href="./../styles/styles.css">
     <title>Login</title>
@@ -42,7 +42,7 @@
         </div>
     </nav>
     <div id="login">
-        <form>
+        <form id="formulario-login">
             <p id="txt-login">entrar</p>
             <div>
                 <label for="email">E-mail*</label>
