--- a/pages/html/cadastro.html
+++ b/pages/html/cadastro.html
@@ -25,20 +25,9 @@
                     <a class="itens" href="./home.html">Home</a>
                 </li>
                 <li>
-                    <a class="itens" href="./postagens.html">Postagens</a>
-                </li>
-                <li>
-                    <a class="itens" href="./fotos.html">Imagens</a>
-                </li>
-                <li>
-                    <a class="itens" href="./contato.html">contato</a>
+                    <a class="itens" href="./contato.html">fale conosco</a>
                 </li>
             </ul>
-        </div>
-        <div class="logar">
-            <a class="itens-logar" href="./cadastro.html">Cadastre-se</a>
-
-            <a class="itens-logar" href="./login.html">Entrar</a>
         </div>
     </nav>
     <div id="cadastro">
@@ -57,8 +46,10 @@
                 <input name="senha" type="password" required></input>
             </div>
             <p class="frase-obt"><strong>Itens com * são obrigatórios</strong></p>
-            <button id="btn2" type="submit">ENVIAR</button>
+            <button id="btn2" type="submit">CADASTRAR</button>
+            <button id="btn5"><a id="a-cadastro" href="./login.html">Já tem uma conta? Clique aqui!</a></button>
         </form>
+        
     </div>
 
 
