--- a/pages/html/fotos.html
+++ b/pages/html/fotos.html
@@ -29,15 +29,9 @@
                     <a class="itens" href="./fotos.html">Imagens</a>
                 </li>
                 <li>
-                    <a class="itens" href="./contato.html">contato</a>
+                    <a class="itens" href="./contato.html">fale conosco</a>
                 </li>
             </ul>
-        </div>
-
-        <div class="logar">
-            <a class="itens-logar" href="./cadastro.html">Cadastre-se</a>
-
-            <a class="itens-logar" href="./login.html">Entrar</a>
         </div>
     </nav>
     <div id="cardFotos">
