--- a/pages/html/login.html
+++ b/pages/html/login.html
@@ -25,21 +25,11 @@
                     <a class="itens" href="./home.html">Home</a>
                 </li>
                 <li>
-                    <a class="itens" href="./postagens.html">Postagens</a>
-                </li>
-                <li>
-                    <a class="itens" href="./fotos.html">Imagens</a>
-                </li>
-                <li>
-                    <a class="itens" href="./contato.html">contato</a>
+                    <a class="itens" href="./contato.html">fale conosco</a>
                 </li>
             </ul>
         </div>
-        <div class="logar">
-            <a class="itens-logar" href="./cadastro.html">Cadastre-se</a>
 
-            <a class="itens-logar" href="./login.html">Entrar</a>
-        </div>
     </nav>
     <div id="login">
         <form id="formulario-login">
@@ -53,7 +43,8 @@
                 <input name="senha" type="password" required></input>
             </div>
             <p class="frase-obt"><strong>Itens com * são obrigatórios</strong></p>
-            <button id="btn3" type="submit">ENVIAR</button>
+            <button id="btn3" type="submit">ENTRAR</button>
+            <button id="btn4"> <a id="a-login" href="./cadastro.html">Não tem uma conta? Criar!</a></button>
         </form>
     </div>
 
