--- a/pages/html/home.html
+++ b/pages/html/home.html
@@ -20,13 +20,7 @@
         <div class="menu">
             <ul>
                 <li>
-                    <a class="itens" href="./postagens.html">Postagens</a>
-                </li>
-                <li>
-                    <a class="itens" href="./fotos.html">Imagens</a>
-                </li>
-                <li>
-                    <a class="itens" href="./contato.html">contato</a>
+                    <a class="itens" href="./contato.html">fale conosco</a>
                 </li>
             </ul>
         </div>
