Adicionando novas estilizações

--- a/pages/html/login.html
+++ b/pages/html/login.html
@@ -36,11 +36,12 @@
             <p id="txt-login">entrar</p>
             <div>
                 <label for="email">E-mail*</label>
-                <input name="email" type="email" required oninput="validarEmail()">
+                <input name="email" type="email" placeholder="Digite seu e-mail" required oninput="validarEmail()">
+                <span class="span">Digite um e-mail válido</span>
             </div>
             <div>
                 <label for="mensagem">Senha*</label>
-                <input name="senha" type="password" required></input>
+                <input name="senha" type="password" placeholder="Digite sua senha" required></input>
             </div>
             <p class="frase-obt"><strong>Itens com * são obrigatórios</strong></p>
             <button id="btn3" type="submit">ENTRAR</button>
