--- a/pages/html/cadastro.html
+++ b/pages/html/cadastro.html
@@ -35,15 +35,16 @@
             <p id="txt-cadastro">Cadastre-se</p>
             <div>
                 <label for="nome">Nome*</label>
-                <input name="nome" type="text" required>
+                <input name="nome" type="text" placeholder="Digite seu nome" required>
             </div>
             <div>
                 <label for="email">E-mail*</label>
-                <input name="email" type="email" required oninput="validarEmail()">
+                <input name="email" type="email" placeholder="Digite seu e-mail" required oninput="validarEmail()">
+                <span class="span">Digite um e-mail válido</span>
             </div>
             <div>
                 <label for="mensagem">Senha*</label>
-                <input name="senha" type="password" required></input>
+                <input name="senha" type="password" placeholder="Digite sua senha" required></input>
             </div>
             <p class="frase-obt"><strong>Itens com * são obrigatórios</strong></p>
             <button id="btn2" type="submit">CADASTRAR</button>
