--- a/pages/html/contato.html
+++ b/pages/html/contato.html
@@ -38,15 +38,16 @@
             <p class="frase1">Deseja falar conosco?</p>
             <div>
                 <label for="nome">Nome*</label>
-                <input name="nome" type="text" required>
+                <input name="nome" type="text"  placeholder="Digite seu nome" required>
             </div>
             <div>
                 <label for="email">E-mail*</label>
-                <input name="email" type="email" required oninput="validarEmail()">
+                <input name="email" type="email" placeholder="Digite seu e-mail" required oninput="validarEmail()">
+                <span class="span">Digite um e-mail válido</span>
             </div>
             <div>
                 <label for="mensagem">Mensagem*</label>
-                <textarea name="mensagem" rows="5" required></textarea>
+                <textarea name="mensagem" rows="5" placeholder="Digite sua mensagem" required></textarea>
             </div>
             <p class="frase-obt"><strong>Itens com * são obrigatórios</strong></p>
             <button id="btn" type="submit">ENVIAR</button>
